aws/subnet.tf
resource "aws_subnet" "default" {
	vpc_id = "${aws_vpc.default.id}"
	cidr_block = "10.0.0.0/24"
}
