aws/security-group2.tf
resource "aws_security_group" "api" {
	name = "API-security-group"
	description = "Default Security Group"
	vpc_id = "${aws_vpc.default.id}"
	ingress {
		from_port = 22
		to_port = 22
		protocol = "TCP"
		cidr_blocks = ["0.0.0.0/0"]
	}
	ingress {
		from_port = 8080
		to_port = 8080
		protocol = "TCP"
		cidr_blocks =["0.0.0.0/0"]
	}
	egress {
		from_port = 0
		to_port = 0
		protocol = "-1"
		cidr_blocks = ["0.0.0.0/0"]
	}
}
